# conifer-analysis

./: .cruft.json  .gitattributes  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: cron.yml  main.yml
docs/source/: conf.py  index.rst
src/conifer_analysis/: __init__.py  extract.py  helpers.py  pipeline.py  transform.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
