[metadata]
name = conifer-analysis
url = https://github.com/Midnighter/conifer-analysis
download_url = https://pypi.org/project/conifer-analysis/
project_urls =
    Source Code = https://github.com/Midnighter/conifer-analysis
    Documentation = https://conifer-analysis.readthedocs.io
    Bug Tracker = https://github.com/Midnighter/conifer-analysis/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Post-process conifer output for downstream statistical analysis.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =

[options]
zip_safe = True
install_requires =
    depinfo
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/conifer_analysis/_version.py
versionfile_build = conifer_analysis/_version.py
tag_prefix =

